--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,17 @@
    crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap"
     rel="stylesheet">
-</head>
-<body style="height:100% ; position: absolute; width:100%">
+    <link rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/css/mdb.min.css" rel="stylesheet">
+    </head>
+<body>
 
   <app-root></app-root>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
   </script>
+     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/js/mdb.min.js"></script>
+
   <script
    src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
@@ -29,4 +34,5 @@
    crossorigin="anonymous">
    </script>
 </body>
+
 </html>
